# parser-csv-to-json

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install.sh
.cache/clangd/index/: main.cc.F39021F61E2894CE.idx  parceCSV.hpp.A49D19C53C25E748.idx  parseCSV.cc.79F2EA9013CE987A.idx  rapidcsv.h.03252180232F1BFC.idx  writeJSON.cc.FEEB2F1EA8DAAF74.idx  writeJSON.hpp.16E2379ECB4D13BF.idx
.github/workflows/: ci.yml
include/: parceCSV.hpp  writeJSON.hpp
src/: main.c  main.cc  parseCSV.cc  writeJSON.cc
